--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -10,25 +10,43 @@ html, body {
     height: 100%;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
     background-color: rgba(247, 223, 157, 0.89);
 }
 
-
 #map { 
     grid-column: 1;
-    grid-row: 1;
-    width: 1fr;
-    height: 1fr;
+    grid-row: 1/3;
     margin: 10px;
 }
 
 #event_data_scroll_box {
     grid-column: 2;
     grid-row: 1;
-    width: 1fr;
-    height: 1fr;
     margin: 10px;
     padding: 10px;
     overflow: scroll;
+}
+
+#paragraph_data_scroll_box {
+    grid-column: 2;
+    grid-row: 2;
+    margin: 10px;
+    padding: 10px;
+    overflow: scroll;
+}
+
+#top_buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 10px;
+}
+
+#event_title {
+    font-weight:bold;
+}
+
+#paragraph_title {
+    font-weight:bold;
 }
