--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -15,8 +15,6 @@ html, body {
 }
 
 #map { 
-    width: 100%;
-    height: 100%;
     grid-column: 1;
     grid-row: 1/3;
     margin: 10px;
@@ -26,28 +24,33 @@ html, body {
 #event_data_scroll_box {
     grid-column: 2;
     grid-row: 1;
-    margin: 10px;
-    padding: 10px;
-    overflow: scroll;
 }
 
 #paragraph_data_scroll_box {
     grid-column: 2;
     grid-row: 2;
+}
+
+.scroll_box {
     margin: 10px;
     padding: 10px;
     overflow: scroll;
 }
 
-#top_buttons {
+.title {
+    font-weight: bold;
+}
+
+ul {
+    margin: 5px;
+    padding-left: 10px;
+}
+
+.buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin: 10px;
-}
-
-.title {
-    font-weight: bold;
 }
 
 .popup {
@@ -61,17 +64,38 @@ html, body {
     overflow: scroll;
 }
 
-ul {
-    margin: 5px;
-    padding-left: 10px;
-}
-
-.changer_style_div {
+#changer_style_div {
     bottom: .5em;
     left: .5em;
 }
 
-.changer_style_button {
+#changer_style_button {
     height: 2em !important;
     width: 8em !important;
+}
+
+#form_changer_style {
+    display: none; 
+    position: absolute; 
+    bottom: 3em; 
+    left: 0.5em;
+    background: white; 
+    padding: 15px; 
+    border-radius: 8px; 
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3); 
+    z-index: 1000;
+}
+
+.color_input {
+    -moz-appearance: none;
+    appearance: none;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.color_input::-moz-color-swatch {
+    border-radius: 15px;
+    border: none;
 }
