début filtre selon nb articles et paragraphes

--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -149,6 +149,10 @@ ul {
     width: 6em;
 }
 
+.input_number {
+    width: 5em;
+}
+
 .color_input {
     -moz-appearance: none;
     appearance: none;
