--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -11,7 +11,7 @@ html, body {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
-    background-color: rgba(247, 223, 157, 0.89);
+    /* background-color: rgba(247, 223, 157, 0.89); */
 }
 
 #map { 
