--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -50,6 +50,11 @@ html, body {
     width: 8em !important;
 }
 
+.ol-scale-line {
+    left: unset;
+    right: 2.5em;
+}
+
 .ol-zoom {
     top: unset;
     left: unset;
