--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -20,7 +20,12 @@ html, body {
     position: relative;
 }
 
-#event_data_scroll_box {
+#event_data_map_scroll_box {
+    grid-column: 2;
+    grid-row: 1/3;
+}
+
+#event_data_zoom_event_scroll_box {
     grid-column: 2;
     grid-row: 1;
 }
