--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -122,6 +122,11 @@ ul {
     flex-direction: row;
 }
 
+.flexcolumn {
+    display: flex;
+    flex-direction: column;
+}
+
 .space_evenly {
     justify-content: space-evenly;
 }
