--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -55,6 +55,16 @@ html, body {
     width: 8em !important;
 }
 
+#download_div {
+    top: .5em;
+    left: 17.5em;
+}
+
+#download_button {
+    height: 2em !important;
+    width: 8em !important;
+}
+
 #affichage_localisation_div {
     top: .5em;
     right: .5em;
@@ -82,6 +92,12 @@ html, body {
     top: 3em; 
     left: 0.5em;
     z-index: 1001;
+}
+
+#form_download {
+    top: 3em; 
+    left: 0.5em;
+    z-index: 1002;
 }
 
 ul {
