--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -40,19 +40,9 @@ html, body {
     left: .5em;
 }
 
-#outil_filtrage_button {
-    height: 2em !important;
-    width: 8em !important;
-}
-
 #changer_style_div {
     top: .5em;
     left: 9em;
-}
-
-#changer_style_button {
-    height: 2em !important;
-    width: 8em !important;
 }
 
 #download_div {
@@ -60,9 +50,61 @@ html, body {
     left: 17.5em;
 }
 
-#download_button {
+.open_form_button {
     height: 2em !important;
     width: 8em !important;
+}
+
+.popup {
+    position: absolute; 
+    background: white; 
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3); 
+    white-space: nowrap;
+}
+
+.petit_popup {
+    display: none; 
+    padding: 5px; 
+    border-radius: 5px;
+    max-height: 10em;
+}
+
+.form {
+    top: 3em; 
+    left: 0.5em;
+    z-index: 1000;
+    display: block; 
+    padding: 15px; 
+    border-radius: 8px;
+    max-height: 90%;
+}
+
+.back_button {
+    width: 3em;
+    height: 3em;
+}
+
+.flatpickr-input {
+    width: 6em;
+}
+
+.input_number {
+    width: 6em;
+}
+
+.color_input {
+    -moz-appearance: none;
+    appearance: none;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.color_input::-moz-color-swatch {
+    border-radius: 15px;
+    border: none;
 }
 
 #affichage_localisation_div {
@@ -80,24 +122,6 @@ html, body {
     left: unset;
     bottom: .5em;
     right: .5em;
-}
-
-#form_changer_style {
-    top: 3em; 
-    left: 0.5em;
-    z-index: 1000;
-}
-
-#form_filter {
-    top: 3em; 
-    left: 0.5em;
-    z-index: 1001;
-}
-
-#form_download {
-    top: 3em; 
-    left: 0.5em;
-    z-index: 1002;
 }
 
 ul {
@@ -129,10 +153,6 @@ ul {
     width: 100%;
 }
 
-.hauteur_max {
-    max-height: 90%;
-}
-
 .flexrow {
     display: flex;
     flex-direction: row;
@@ -158,52 +178,4 @@ ul {
 
 .scroll_box {
     overflow: scroll;
-}
-
-.popup {
-    position: absolute; 
-    background: white; 
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.3); 
-    white-space: nowrap;
-}
-
-.petit_popup {
-    display: none; 
-    padding: 5px; 
-    border-radius: 5px;
-    max-height: 10em;
-}
-
-.grand_popup {
-    display: block; 
-    padding: 15px; 
-    border-radius: 8px;
-}
-
-.back_button {
-    width: 3em;
-    height: 3em;
-}
-
-.flatpickr-input {
-    width: 6em;
-}
-
-.input_number {
-    width: 6em;
-}
-
-.color_input {
-    -moz-appearance: none;
-    appearance: none;
-    width: 30px;
-    height: 30px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
-
-.color_input::-moz-color-swatch {
-    border-radius: 15px;
-    border: none;
 }
