--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -84,8 +84,15 @@ html, body {
 }
 
 .time_series_form {
-    min-height: 30em;
-    min-width: 30em;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    display: block;
+    padding: 10px; 
+    border-radius: 8px;
+    min-height: 50%;
+    min-width: 50%;
 }
 
 .center_popup {
