--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -105,6 +105,15 @@ html, body {
     border-radius: 8px;
 }
 
+.landslide_susceptibility_legend {
+    bottom: 9em; 
+    right: 0.5em;
+    z-index: 1000;
+    display: block; 
+    padding: 5px; 
+    border-radius: 5px;
+}
+
 .back_button {
     width: 3em;
     height: 3em;
@@ -172,6 +181,12 @@ html, body {
 
 #location_div {
     top: .5em;
+    right: .5em;
+}
+
+#legend_div {
+    display: none;
+    bottom: 7em;
     right: .5em;
 }
 
