--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -10,28 +10,43 @@ html, body {
     height: 100%;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 10em 1fr 1fr 3em;
 }
 
 #map { 
     grid-column: 1;
-    grid-row: 1/3;
+    grid-row: 1/5;
     position: relative;
 }
 
-#event_data_map_scroll_box {
-    grid-column: 2;
-    grid-row: 1/3;
-}
-
-#event_data_zoom_event_scroll_box {
+#hazviewer_title {
     grid-column: 2;
     grid-row: 1;
 }
 
-#paragraph_data_scroll_box {
+#hazviewer_logo {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#hazviewer_info {
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#event_data_map_scroll_box {
+    grid-column: 2;
+    grid-row: 2/4;
+}
+
+#event_data_zoom_event_scroll_box {
     grid-column: 2;
     grid-row: 2;
+}
+
+#paragraph_data_scroll_box {
+    grid-column: 2;
+    grid-row: 3;
 }
 
 .bouton_1 {
@@ -247,6 +262,10 @@ ul {
 
 .space_between {
     justify-content: space-between;
+}
+
+.text_center {
+    text-align: center;
 }
 
 .vertical_center {
