--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -121,8 +121,8 @@ html, body {
 }
 
 .landslide_susceptibility_legend {
-    bottom: 9em; 
-    right: 0.5em;
+    bottom: 3em; 
+    left: 0.5em;
     z-index: 1000;
     display: block; 
     padding: 5px; 
@@ -201,8 +201,8 @@ html, body {
 
 #legend_div {
     display: none;
-    bottom: 7em;
-    right: .5em;
+    bottom: 0.5em;
+    left: 0.5em;
 }
 
 .ol-scale-line {
