--- a/core-master/assets/map.css
+++ b/core-master/assets/map.css
@@ -77,6 +77,7 @@ html, body {
     position: absolute; 
     background: white; 
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3); 
+    max-width: 300px;
     white-space: nowrap;
 }
 
